; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/xen/extr_cpu_hotplug.c_vcpu_hotplug.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/xen/extr_cpu_hotplug.c_vcpu_hotplug.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @vcpu_hotplug to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vcpu_hotplug(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @cpu_possible(i32 %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %19

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @vcpu_online(i32 %8)
  switch i32 %9, label %18 [
    i32 1, label %10
    i32 0, label %13
  ]

10:                                               ; preds = %7
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @enable_hotplug_cpu(i32 %11)
  br label %19

13:                                               ; preds = %7
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @cpu_down(i32 %14)
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @disable_hotplug_cpu(i32 %16)
  br label %19

18:                                               ; preds = %7
  br label %19

19:                                               ; preds = %6, %18, %13, %10
  ret void
}

declare dso_local i32 @cpu_possible(i32) #1

declare dso_local i32 @vcpu_online(i32) #1

declare dso_local i32 @enable_hotplug_cpu(i32) #1

declare dso_local i32 @cpu_down(i32) #1

declare dso_local i32 @disable_hotplug_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
